--- a/index.html
+++ b/index.html
@@ -13,10 +13,10 @@
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
 
     <!-- STAR BG CSS -->
-    <link rel="stylesheet" href="starbg.css">
+    <link rel="stylesheet" href="./public/starbg.css">
 
     <!-- MY CSS -->
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="./public/styles.css">
 
     <!-- BOOTSRAP CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
@@ -32,7 +32,7 @@
         <p class="alice-regular" style="font-size: 40px; margin-bottom: 0px;">Welcome to</p>
         <p class="lead alice-regular" style="margin-bottom: 10px;  min-height: 70px;"></p>
           <p class="altlead montserrat-light" style="margin-bottom: 25px;">GAVRIEL ALDRICH'S PORTFOLIO</p>
-        <a href="./partials/about.html"><button class="button-28 montserrat-light" role="button"></button></a>
+        <a href="./public/partials/about.html"><button class="button-28 montserrat-light" role="button"></button></a>
       </section>
   </main>
 
